tests/baselines/reference/constDeclarations-useBeforeDefinition(strict=true).errors.txt
constDeclarations-useBeforeDefinition.ts(2,5): error TS2448: Block-scoped variable 'c1' used before its declaration.
constDeclarations-useBeforeDefinition.ts(2,5): error TS2454: Variable 'c1' is used before being assigned.
constDeclarations-useBeforeDefinition.ts(8,5): error TS2448: Block-scoped variable 'v1' used before its declaration.
constDeclarations-useBeforeDefinition.ts(8,5): error TS2454: Variable 'v1' is used before being assigned.


==== constDeclarations-useBeforeDefinition.ts (4 errors) ====
    {
        c1;
        ~~
!!! error TS2448: Block-scoped variable 'c1' used before its declaration.
!!! related TS2728 constDeclarations-useBeforeDefinition.ts:3:11: 'c1' is declared here.
        ~~
!!! error TS2454: Variable 'c1' is used before being assigned.
        const c1 = 0;
    }
    
    var v1;
    {
        v1;
        ~~
!!! error TS2448: Block-scoped variable 'v1' used before its declaration.
!!! related TS2728 constDeclarations-useBeforeDefinition.ts:9:11: 'v1' is declared here.
        ~~
!!! error TS2454: Variable 'v1' is used before being assigned.
        const v1 = 0;
    }
    